Enable preview features when running ConsoleLauncher